5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1613_2425.log
== SUBMITION (2019-04-04 18:15:55) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
cosumo=distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.163776
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    cosumo=distancia/combustivel
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:02) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
cosumo=distancia/combustivel
print(round(consumo,3))
print("km/l")
-- ERROR:
File "XXXX", line 3
    cosumo=distancia/combustivel
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:16:35) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
cosumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.161914
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    cosumo= distancia/combustivel
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:10) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.22773
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    consumo= distancia/combustivel
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:15) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.143322
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    consumo= distancia/combustivel
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:18) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- ERROR:
File "XXXX", line 3
    consumo= distancia/combustivel
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:41) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.154464
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    consumo= distancia/combustivel
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:18:03) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- ERROR:
File "XXXX", line 3
    consumo= distancia/combustivel
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:18:19) 
-- CODE:
distancia=float(input("digite o numero"))
combustivel=float(input("digite o numero")
consumo= distancia//combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.147207
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 3
    consumo= distancia//combustivel
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
